--- a/oc/cv.yml
+++ b/oc/cv.yml
@@ -2,18 +2,15 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   labels:
-    app: mydata
+    app: Test
   name: cv
   namespace: my-data
 spec:
-  lookupPolicy:
-    local: false
   tags:
     - from:
         kind: DockerImage
-        name: 'ilix/mydata-cv:009'
-      importPolicy: {}
-      name: 'mydata-cv'
+        name: jobtechswe/mydata-cv:openshift
+      name: latest
       referencePolicy:
         type: Source
 ---
@@ -21,19 +18,16 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: mydata
-    phase: test
+    app: Test
   name: cv
   namespace: my-data
 spec:
   replicas: 1
   selector:
-    app: mydata
-    phase: test
+    app: Test
     deploymentconfig: cv
   strategy:
     activeDeadlineSeconds: 21600
-    resources: {}
     rollingParams:
       intervalSeconds: 1
       maxSurge: 25%
@@ -44,40 +38,46 @@ spec:
   template:
     metadata:
       labels:
-        app: mydata
-        phase: test
+        app: Test
         deploymentconfig: cv
     spec:
       containers:
         - env:
-            - name: PORT
-              value: '4000'
-            - name: APM_SERVER
-              value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io/'
-            - name: APM_TOKEN
-              value: ''
-            - name: APP_NAME
-              value: mydata-cv api
-            - name: NODE_ENV
-              value: oc
-            - name: OPERATOR_URL
-              value: 'http://operator.my-data.svc:3000'
-          image: ilix/mydata-cv:009
-          imagePullPolicy: IfNotPresent
+          - name: PORT
+            value: '4000'
+          - name: APM_SERVER
+            value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io:443'
+          - name: APM_TOKEN
+            value: '3qE1xQ4unjG088EZ5e'
+          - name: APP_NAME
+            value: mydata-cv api
+          - name: NODE_ENV
+            value: oc
+          - name: OPERATOR_URL
+            value: 'http://operator.my-data.svc:3000'
+          - name: POSTGRES_USER
+            value: postgresuser
+          - name: POSTGRES_PASSWORD
+            value: postgrespassword
+          - name: POSTGRES_DB
+            value: cv
+          - name: DATABASE_URL
+            value: postgres://postgresuser:postgrespassword@postgresql-cv.my-data.svc:5432/cv
+          - name: REDIS
+            value: 'redis://:fubar@redis-cv.my-data.svc:6379/'
+          image: jobtechswe/mydata-cv:openshift
+          imagePullPolicy: Always
           name: cv
           ports:
             - containerPort: 4000
               name: http
               protocol: TCP
-          resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
-      securityContext: {}
       terminationGracePeriodSeconds: 30
-  test: false
   triggers:
     - type: ConfigChange
     - imageChangeParams:
@@ -86,7 +86,7 @@ spec:
           - cv
         from:
           kind: ImageStreamTag
-          name: 'cv:mydata-cv'
+          name: 'cv:latest'
           namespace: my-data
       type: ImageChange
 ---
@@ -94,8 +94,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: mydata
-    phase: test
+    app: Test
   name: cv
   namespace: my-data
 spec:
@@ -105,20 +104,15 @@ spec:
       protocol: TCP
       targetPort: 4000
   selector:
-    app: mydata
-    phase: test
+    app: Test
     deploymentconfig: cv
-  sessionAffinity: None
   type: ClusterIP
-status:
-  loadBalancer: {}
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: mydata
-    phase: test
+    app: Test
   name: cv
   namespace: my-data
 spec:
