--- a/oc/cv.yml
+++ b/oc/cv.yml
@@ -2,7 +2,7 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   labels:
-    app: Test
+    app: CV_TEST
   name: cv
   namespace: my-data
 spec:
@@ -18,7 +18,7 @@ apiVersion: v1
 kind: BuildConfig
 metadata:
   labels:
-    app: Test
+    app: CV_TEST
   name: cv
   namespace: my-data
 spec:
@@ -45,13 +45,13 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: Test
+    app: CV_TEST
   name: cv
   namespace: my-data
 spec:
   replicas: 1
   selector:
-    app: Test
+    app: CV_TEST
     deploymentconfig: cv
   strategy:
     activeDeadlineSeconds: 21600
@@ -65,7 +65,7 @@ spec:
   template:
     metadata:
       labels:
-        app: Test
+        app: CV_TEST
         deploymentconfig: cv
     spec:
       containers:
@@ -121,7 +121,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: Test
+    app: CV_TEST
   name: cv
   namespace: my-data
 spec:
@@ -131,7 +131,7 @@ spec:
       protocol: TCP
       targetPort: 4000
   selector:
-    app: Test
+    app: CV_TEST
     deploymentconfig: cv
   type: ClusterIP
 ---
@@ -139,7 +139,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: Test
+    app: CV_TEST
   name: cv
   namespace: my-data
 spec:
