--- a/oc/operator.yml
+++ b/oc/operator.yml
@@ -2,7 +2,7 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   labels:
-    app: Test
+    app: Operator_TEST
   name: operator
   namespace: my-data
 spec:
@@ -18,13 +18,13 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: Test
+    app: Operator_TEST
   name: operator
   namespace: my-data
 spec:
   replicas: 1
   selector:
-    app: Test
+    app: Operator_TEST
     deploymentconfig: operator
   strategy:
     activeDeadlineSeconds: 21600
@@ -38,7 +38,7 @@ spec:
   template:
     metadata:
       labels:
-        app: Test
+        app: Operator_TEST
         deploymentconfig: operator
     spec:
       containers:
@@ -90,7 +90,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: Test
+    app: Operator_TEST
   name: operator
   namespace: my-data
 spec:
@@ -100,7 +100,7 @@ spec:
       protocol: TCP
       targetPort: 3000
   selector:
-    app: Test
+    app: Operator_TEST
     deploymentconfig: operator
   type: ClusterIP
 ---
@@ -108,7 +108,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: Test
+    app: Operator_TEST
   name: operator
   namespace: my-data
 spec:
