Enable TLS on routes

--- a/openshift/cv.yml
+++ b/openshift/cv.yml
@@ -153,3 +153,9 @@ spec:
     name: cv
     weight: 100
   wildcardPolicy: None
+  tls:
+    valueFrom:
+      secretKeyRef:
+        key: ca.crt
+        name: tls
+    termination: edge
