--- a/openshift/cv.yml
+++ b/openshift/cv.yml
@@ -75,7 +75,10 @@ spec:
           - name: APM_SERVER
             value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io:443'
           - name: APM_TOKEN
-            value: ''
+            valueFrom:
+              secretKeyRef:
+                name: apm
+                key: token
           - name: APP_NAME
             value: mydata-cv api
           - name: NODE_ENV
@@ -156,6 +159,6 @@ spec:
   tls:
     valueFrom:
       secretKeyRef:
-        key: ca.crt
+        key: jtech.se.crt
         name: tls
     termination: edge
