--- a/openshift/operator.yml
+++ b/openshift/operator.yml
@@ -91,7 +91,10 @@ spec:
           - name: APM_SERVER
             value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io'
           - name: APM_TOKEN
-            value: ''
+            valueFrom:
+              secretKeyRef:
+                name: apm
+                key: token
           image: jobtechswe/mydata-operator:openshift
           imagePullPolicy: Always
           name: operator
@@ -150,6 +153,6 @@ spec:
   tls:
     valueFrom:
       secretKeyRef:
-        key: ca.crt
+        key: jtech.se.crt
         name: tls
     termination: edge
