--- a/openshift/cv.yml
+++ b/openshift/cv.yml
@@ -30,7 +30,8 @@ spec:
         secret: meow123
   source:
     git:
-      uri: https://github.com/ilix/mydata-cv
+      ref: openshift
+      uri: https://github.com/jobtechswe/mydata-cv
   strategy:
     dockerStrategy:
       from:
