--- a/openshift/operator.yml
+++ b/openshift/operator.yml
@@ -1,19 +1,3 @@
-apiVersion: image.openshift.io/v1
-kind: ImageStream
-metadata:
-  labels:
-    app: Operator_TEST
-  name: operator
-  namespace: my-data
-spec:
-  tags:
-    - from:
-        kind: DockerImage
-        name: 'jobtechswe/mydata-operator:openshift'
-      name: 'latest'
-      referencePolicy:
-        type: Source
----
 apiVersion: v1
 kind: BuildConfig
 metadata:
@@ -96,7 +80,7 @@ spec:
               secretKeyRef:
                 name: apm
                 key: token
-          image: jobtechswe/mydata-operator:openshift
+          image: jobtechswe/mydata-operator:latest
           imagePullPolicy: Always
           name: operator
           terminationMessagePath: /dev/termination-log
