Moved BuildConfig stuff to ImageStream yaml

--- a/openshift/cv-ImageStream.yml
+++ b/openshift/cv-ImageStream.yml
@@ -19,3 +19,61 @@ spec:
         name: jobtechswe/mydata-cv:test
       referencePolicy:
         type: Source
+---
+apiVersion: v1
+kind: BuildConfig
+metadata:
+  name: cv-ci
+  namespace: my-data
+spec:
+  runPolicy: Serial
+  triggers:
+    -
+      type: GitHub
+      github:
+        secret: meow123
+  source:
+    git:
+      ref: master
+      uri: https://github.com/jobtechswe/mydata-cv
+  strategy:
+    dockerStrategy:
+      from:
+        kind: DockerImage
+        name: node:alpine
+  output:
+    to:
+      kind: ImageStreamTag
+      name: cv:latest
+  resources:
+    limits:
+      memory: 1Gi
+---
+apiVersion: v1
+kind: BuildConfig
+metadata:
+  name: cv-test
+  namespace: my-data
+spec:
+  runPolicy: Serial
+  triggers:
+    -
+      type: GitHub
+      github:
+        secret: meow123
+  source:
+    git:
+      ref: test
+      uri: https://github.com/jobtechswe/mydata-cv
+  strategy:
+    dockerStrategy:
+      from:
+        kind: DockerImage
+        name: node:alpine
+  output:
+    to:
+      kind: ImageStreamTag
+      name: cv:test
+  resources:
+    limits:
+      memory: 1Gi
