--- a/openshift/cv-CI.yml
+++ b/openshift/cv-CI.yml
@@ -1,43 +1,14 @@
-apiVersion: v1
-kind: BuildConfig
-metadata:
-  name: cv
-  namespace: my-data
-spec:
-  runPolicy: Serial
-  triggers:
-    -
-      type: GitHub
-      github:
-        secret: meow123
-  source:
-    git:
-      ref: openshift
-      uri: https://github.com/jobtechswe/mydata-cv
-  strategy:
-    dockerStrategy:
-      from:
-        kind: DockerImage
-        name: node:alpine
-  output:
-    to:
-      kind: ImageStreamTag
-      name: cv:latest
-  resources:
-    limits:
-      memory: 1Gi
----
 apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: CV_TEST
+    app: CV_CI
   name: cv
   namespace: my-data
 spec:
   replicas: 1
   selector:
-    app: CV_TEST
+    app: CV_CI
     deploymentconfig: cv
   strategy:
     activeDeadlineSeconds: 21600
@@ -51,7 +22,7 @@ spec:
   template:
     metadata:
       labels:
-        app: CV_TEST
+        app: CV_CI
         deploymentconfig: cv
     spec:
       containers:
@@ -112,7 +83,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: CV_TEST
+    app: CV_CI
   name: cv
   namespace: my-data
 spec:
@@ -122,7 +93,7 @@ spec:
       protocol: TCP
       targetPort: 4000
   selector:
-    app: CV_TEST
+    app: CV_CI
     deploymentconfig: cv
   type: ClusterIP
 ---
@@ -130,7 +101,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: CV_TEST
+    app: CV_CI
   name: cv
   namespace: my-data
 spec:
