--- a/openshift/cv-CI.yml
+++ b/openshift/cv-CI.yml
@@ -2,13 +2,13 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: CV_CI
+    app: CV
   name: cv
   namespace: my-data
 spec:
   replicas: 1
   selector:
-    app: CV_CI
+    app: CV
     deploymentconfig: cv
   strategy:
     activeDeadlineSeconds: 21600
@@ -22,7 +22,7 @@ spec:
   template:
     metadata:
       labels:
-        app: CV_CI
+        app: CV
         deploymentconfig: cv
     spec:
       containers:
@@ -54,7 +54,7 @@ spec:
             value: 'redis://:fubar@redis-cv.my-data.svc:6379/'
           - name: CLIENT_ID
             value: cv-my-data.dev.services.jtech.se
-          image: jobtechswe/mydata-cv:latest
+          image: jobtechswe/mydata-cv:openshift
           imagePullPolicy: Always
           name: cv
           ports:
@@ -75,7 +75,7 @@ spec:
           - cv
         from:
           kind: ImageStreamTag
-          name: 'cv:latest'
+          name: 'cv:ci'
           namespace: my-data
       type: ImageChange
 ---
@@ -83,8 +83,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: CV_CI
-  name: cv
+    app: CV
+  name: cv-ci
   namespace: my-data
 spec:
   ports:
@@ -93,7 +93,7 @@ spec:
       protocol: TCP
       targetPort: 4000
   selector:
-    app: CV_CI
+    app: CV
     deploymentconfig: cv
   type: ClusterIP
 ---
@@ -101,16 +101,16 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: CV_CI
-  name: cv
+    app: CV
+  name: cv-ci
   namespace: my-data
 spec:
-  host: cv-my-data.dev.services.jtech.se
+  host: cv-ci-my-data.dev.services.jtech.se
   port:
     targetPort: http
   to:
     kind: Service
-    name: cv
+    name: cv-ci
     weight: 100
   wildcardPolicy: None
   tls:
