--- a/openshift/cv-CI.yml
+++ b/openshift/cv-CI.yml
@@ -2,14 +2,14 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: CV
-  name: cv
+    app: CI
+  name: mydata-cv-ci
   namespace: my-data
 spec:
   replicas: 1
   selector:
-    app: CV
-    deploymentconfig: cv
+    app: CI
+    deploymentconfig: mydata-cv-ci
   strategy:
     activeDeadlineSeconds: 21600
     rollingParams:
@@ -22,8 +22,8 @@ spec:
   template:
     metadata:
       labels:
-        app: CV
-        deploymentconfig: cv
+        app: CI
+        deploymentconfig: mydata-cv-ci
     spec:
       containers:
         - env:
@@ -53,10 +53,10 @@ spec:
           - name: REDIS
             value: 'redis://:fubar@redis-cv.my-data.svc:6379/'
           - name: CLIENT_ID
-            value: cv-my-data.dev.services.jtech.se
+            value: ci-cv-my-data.dev.services.jtech.se
           image: jobtechswe/mydata-cv:openshift
           imagePullPolicy: Always
-          name: cv
+          name: mydata-cv-ci
           ports:
             - containerPort: 4000
               name: http
@@ -72,7 +72,7 @@ spec:
     - imageChangeParams:
         automatic: true
         containerNames:
-          - cv
+          - mydata-cv-ci
         from:
           kind: ImageStreamTag
           name: 'cv:ci'
@@ -83,8 +83,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: CV
-  name: cv-ci
+    app: CI
+  name: mydata-cv-ci
   namespace: my-data
 spec:
   ports:
@@ -93,24 +93,24 @@ spec:
       protocol: TCP
       targetPort: 4000
   selector:
-    app: CV
-    deploymentconfig: cv
+    app: CI
+    deploymentconfig: mydata-cv-ci
   type: ClusterIP
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: CV
-  name: cv-ci
+    app: CI
+  name: mydata-cv-ci
   namespace: my-data
 spec:
-  host: cv-ci-my-data.dev.services.jtech.se
+  host: ci-cv-my-data.dev.services.jtech.se
   port:
     targetPort: http
   to:
     kind: Service
-    name: cv-ci
+    name: mydata-cv-ci
     weight: 100
   wildcardPolicy: None
   tls:
