--- a/openshift/operator-CI.yml
+++ b/openshift/operator-CI.yml
@@ -1,43 +1,15 @@
-apiVersion: v1
-kind: BuildConfig
-metadata:
-  labels:
-    app: Operator_TEST
-  name: operator
-  namespace: my-data
-spec:
-  runPolicy: Serial
-  triggers:
-    -
-      type: GitHub
-      github:
-        secret: meow123
-  source:
-    git:
-      ref: openshift
-      uri: https://github.com/jobtechswe/mydata-operator
-  strategy:
-    dockerStrategy:
-      from:
-        kind: DockerImage
-        name: node:11
-  output:
-    to:
-      kind: ImageStreamTag
-      name: operator:latest
----
 apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: Operator_TEST
-  name: operator
+    app: CI
+  name: mydata-operator-ci
   namespace: my-data
 spec:
   replicas: 1
   selector:
-    app: Operator_TEST
-    deploymentconfig: operator
+    app: CI
+    deploymentconfig: mydata-operator-ci
   strategy:
     activeDeadlineSeconds: 21600
     rollingParams:
@@ -50,8 +22,8 @@ spec:
   template:
     metadata:
       labels:
-        app: Operator_TEST
-        deploymentconfig: operator
+        app: CI
+        deploymentconfig: mydata-operator-ci
     spec:
       containers:
         - env:
@@ -82,7 +54,7 @@ spec:
                 key: token
           image: jobtechswe/mydata-operator:latest
           imagePullPolicy: Always
-          name: operator
+          name: mydata-operator-ci
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
@@ -94,7 +66,7 @@ spec:
     - imageChangeParams:
         automatic: true
         containerNames:
-          - operator
+          - mydata-operator-ci
         from:
           kind: ImageStreamTag
           name: 'operator:latest'
@@ -105,8 +77,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: Operator_TEST
-  name: operator
+    app: CI
+  name: mydata-operator-ci
   namespace: my-data
 spec:
   ports:
@@ -115,16 +87,16 @@ spec:
       protocol: TCP
       targetPort: 3000
   selector:
-    app: Operator_TEST
-    deploymentconfig: operator
+    app: CI
+    deploymentconfig: mydata-operator-ci
   type: ClusterIP
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: Operator_TEST
-  name: operator
+    app: CI
+  name: mydata-operator-ci
   namespace: my-data
 spec:
   host: operator-my-data.dev.services.jtech.se
@@ -132,7 +104,7 @@ spec:
     targetPort: http
   to:
     kind: Service
-    name: operator
+    name: mydata-operator-ci
     weight: 100
   wildcardPolicy: None
   tls:
