Separate postgresql for cv and operator

--- a/openshift/cv-CI.yml
+++ b/openshift/cv-CI.yml
@@ -49,7 +49,7 @@ spec:
           - name: POSTGRES_DB
             value: cv
           - name: DATABASE_URL
-            value: postgres://postgresuser:postgrespassword@ci-postgresql.my-data.svc:5432/cv
+            value: postgres://postgresuser:postgrespassword@ci-postgresql-cv.my-data.svc:5432/cv
           - name: REDIS
             value: 'redis://:fubar@ci-redis.my-data.svc:6379/'
           - name: CLIENT_ID
