Rewritten store, test config and docker-compose
Rewrote the store in Operator Client
Implemented above in examples/cv
Added docker-compose to run all db:s
Added install-all to top level
Added pack command to client
Pointed examples/cv to locally packed operator client

--- a/operator/package.json
+++ b/operator/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "start": "node-pg-migrate up && node ./lib/server.js",
     "dev": "npm run migrate up && NODE_ENV=development nodemon --inspect ./lib/server.js",
-    "test": "jest -c jest.config.js --watchAll",
+    "test": "jest -c jest.config.js",
+    "test:watch": "jest -c jest.config.js --watchAll",
+    "integration": "jest -c jest.integration.config.js",
+    "integration:watch": "jest -c jest.integration.config.js --watchAll",
     "lint": "eslint '**/*.js'",
-    "integration": "jest -c jest.integration.config.js --watchAll",
     "migrate": "DATABASE_URL=postgres://postgresuser:postgrespassword@localhost:5432/mydata node-pg-migrate"
   },
   "contributors": [
