--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -48,3 +48,47 @@ services:
       retries: 3
     depends_on:
       - elasticsearch
+
+  redis-operator:
+    image: redis:4.0-alpine
+    ports:
+      - 6379:6379
+    environment:
+      - REDIS_PASSWORD=fubar
+    command: sh -c 'redis-server --requirepass $${REDIS_PASSWORD}'
+
+  postgres-operator:
+    image: postgres:11-alpine
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=postgresuser
+      - POSTGRES_PASSWORD=postgrespassword
+      - POSTGRES_DB=mydata
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgresuser -d mydata"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  redis-cv:
+    image: redis:4.0-alpine
+    ports:
+      - 6380:6379
+    environment:
+      - REDIS_PASSWORD=fubar
+    command: sh -c 'redis-server --requirepass $${REDIS_PASSWORD}'
+
+  postgres-cv:
+    image: postgres:11-alpine
+    ports:
+      - 5433:5432
+    environment:
+      - POSTGRES_USER=postgresuser
+      - POSTGRES_PASSWORD=postgrespassword
+      - POSTGRES_DB=cv
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgresuser -d cv"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
