--- a/infrastructure/openshift/cv-ImageStream.yml
+++ b/infrastructure/openshift/cv-ImageStream.yml
@@ -23,7 +23,8 @@ spec:
     -
       type: GitHub
       github:
-        secret: meow123
+        secretReference:
+          name: github-webhook-secret
   source:
     git:
       ref: master
@@ -49,7 +50,8 @@ spec:
     -
       type: GitHub
       github:
-        secret: meow123
+        secretReference:
+          name: github-webhook-secret
   source:
     git:
       ref: v0.0.1
